--- a/fraud_detection/notebook/pycaret.ipynb
+++ b/fraud_detection/notebook/pycaret.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,96 +474,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_220ec_row4_col1 {\n",
+       "#T_92d90_row4_col1 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_220ec\">\n",
+       "<table id=\"T_92d90\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_220ec_level0_col0\" class=\"col_heading level0 col0\" >Description</th>\n",
-       "      <th id=\"T_220ec_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
+       "      <th id=\"T_92d90_level0_col0\" class=\"col_heading level0 col0\" >Description</th>\n",
+       "      <th id=\"T_92d90_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_220ec_row0_col0\" class=\"data row0 col0\" >Session id</td>\n",
-       "      <td id=\"T_220ec_row0_col1\" class=\"data row0 col1\" >4384</td>\n",
+       "      <th id=\"T_92d90_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_92d90_row0_col0\" class=\"data row0 col0\" >Session id</td>\n",
+       "      <td id=\"T_92d90_row0_col1\" class=\"data row0 col1\" >6917</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_220ec_row1_col0\" class=\"data row1 col0\" >Original data shape</td>\n",
-       "      <td id=\"T_220ec_row1_col1\" class=\"data row1 col1\" >(140000, 13)</td>\n",
+       "      <th id=\"T_92d90_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_92d90_row1_col0\" class=\"data row1 col0\" >Original data shape</td>\n",
+       "      <td id=\"T_92d90_row1_col1\" class=\"data row1 col1\" >(140000, 13)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_220ec_row2_col0\" class=\"data row2 col0\" >Transformed data shape</td>\n",
-       "      <td id=\"T_220ec_row2_col1\" class=\"data row2 col1\" >(140000, 13)</td>\n",
+       "      <th id=\"T_92d90_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_92d90_row2_col0\" class=\"data row2 col0\" >Transformed data shape</td>\n",
+       "      <td id=\"T_92d90_row2_col1\" class=\"data row2 col1\" >(140000, 13)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_220ec_row3_col0\" class=\"data row3 col0\" >Numeric features</td>\n",
-       "      <td id=\"T_220ec_row3_col1\" class=\"data row3 col1\" >13</td>\n",
+       "      <th id=\"T_92d90_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_92d90_row3_col0\" class=\"data row3 col0\" >Numeric features</td>\n",
+       "      <td id=\"T_92d90_row3_col1\" class=\"data row3 col1\" >13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_220ec_row4_col0\" class=\"data row4 col0\" >Preprocess</td>\n",
-       "      <td id=\"T_220ec_row4_col1\" class=\"data row4 col1\" >True</td>\n",
+       "      <th id=\"T_92d90_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_92d90_row4_col0\" class=\"data row4 col0\" >Preprocess</td>\n",
+       "      <td id=\"T_92d90_row4_col1\" class=\"data row4 col1\" >True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_220ec_row5_col0\" class=\"data row5 col0\" >Imputation type</td>\n",
-       "      <td id=\"T_220ec_row5_col1\" class=\"data row5 col1\" >simple</td>\n",
+       "      <th id=\"T_92d90_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_92d90_row5_col0\" class=\"data row5 col0\" >Imputation type</td>\n",
+       "      <td id=\"T_92d90_row5_col1\" class=\"data row5 col1\" >simple</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_220ec_row6_col0\" class=\"data row6 col0\" >Numeric imputation</td>\n",
-       "      <td id=\"T_220ec_row6_col1\" class=\"data row6 col1\" >mean</td>\n",
+       "      <th id=\"T_92d90_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_92d90_row6_col0\" class=\"data row6 col0\" >Numeric imputation</td>\n",
+       "      <td id=\"T_92d90_row6_col1\" class=\"data row6 col1\" >mean</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_220ec_row7_col0\" class=\"data row7 col0\" >Categorical imputation</td>\n",
-       "      <td id=\"T_220ec_row7_col1\" class=\"data row7 col1\" >mode</td>\n",
+       "      <th id=\"T_92d90_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_92d90_row7_col0\" class=\"data row7 col0\" >Categorical imputation</td>\n",
+       "      <td id=\"T_92d90_row7_col1\" class=\"data row7 col1\" >mode</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_220ec_row8_col0\" class=\"data row8 col0\" >CPU Jobs</td>\n",
-       "      <td id=\"T_220ec_row8_col1\" class=\"data row8 col1\" >-1</td>\n",
+       "      <th id=\"T_92d90_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_92d90_row8_col0\" class=\"data row8 col0\" >CPU Jobs</td>\n",
+       "      <td id=\"T_92d90_row8_col1\" class=\"data row8 col1\" >-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_220ec_row9_col0\" class=\"data row9 col0\" >Use GPU</td>\n",
-       "      <td id=\"T_220ec_row9_col1\" class=\"data row9 col1\" >False</td>\n",
+       "      <th id=\"T_92d90_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_92d90_row9_col0\" class=\"data row9 col0\" >Use GPU</td>\n",
+       "      <td id=\"T_92d90_row9_col1\" class=\"data row9 col1\" >False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "      <td id=\"T_220ec_row10_col0\" class=\"data row10 col0\" >Log Experiment</td>\n",
-       "      <td id=\"T_220ec_row10_col1\" class=\"data row10 col1\" >False</td>\n",
+       "      <th id=\"T_92d90_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+       "      <td id=\"T_92d90_row10_col0\" class=\"data row10 col0\" >Log Experiment</td>\n",
+       "      <td id=\"T_92d90_row10_col1\" class=\"data row10 col1\" >False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
-       "      <td id=\"T_220ec_row11_col0\" class=\"data row11 col0\" >Experiment Name</td>\n",
-       "      <td id=\"T_220ec_row11_col1\" class=\"data row11 col1\" >FraudDetection</td>\n",
+       "      <th id=\"T_92d90_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
+       "      <td id=\"T_92d90_row11_col0\" class=\"data row11 col0\" >Experiment Name</td>\n",
+       "      <td id=\"T_92d90_row11_col1\" class=\"data row11 col1\" >FraudDetection</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_220ec_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
-       "      <td id=\"T_220ec_row12_col0\" class=\"data row12 col0\" >USI</td>\n",
-       "      <td id=\"T_220ec_row12_col1\" class=\"data row12 col1\" >9804</td>\n",
+       "      <th id=\"T_92d90_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
+       "      <td id=\"T_92d90_row12_col0\" class=\"data row12 col0\" >USI</td>\n",
+       "      <td id=\"T_92d90_row12_col1\" class=\"data row12 col1\" >7be4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1383023e0>"
+       "<pandas.io.formats.style.Styler at 0x2a43a53f0>"
       ]
      },
      "metadata": {},
@@ -572,10 +572,10 @@
     {
      "data": {
       "text/plain": [
-       "<pycaret.anomaly.oop.AnomalyExperiment at 0x29c19f430>"
+       "<pycaret.anomaly.oop.AnomalyExperiment at 0x17d37e8f0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,6 +584,56 @@
     "fraud_ses = AnomalyExperiment()\n",
     "fraud_ses.exp_name_log = \"FraudDetection\"\n",
     "fraud_ses.setup(X_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function pyod.models.lof.LOF.__init__(self, n_neighbors=20, algorithm='auto', leaf_size=30, metric='minkowski', p=2, metric_params=None, contamination=0.1, n_jobs=1, novelty=True)>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "\n",
+    "mod = __import__(\"pyod\")\n",
+    "def get_constructor(mod, cls_path):\n",
+    "    cls = mod\n",
+    "    for attr in cls_path.split('.'):\n",
+    "        cls = getattr(cls, attr)\n",
+    "    return cls.__init__\n",
+    "\n",
+    "get_constructor(mod, 'models.lof.LOF')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pyod.models.lof.LOF'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lof_cls = fraud_ses.models()['Reference']['lof']\n",
+    "lof_cls"
    ]
   },
   {
